force-app/main/default/objects/CampaignAttributionMember__c/CampaignAttributionMember__c.object-meta.xml
<CustomObject>
    <description>This Object stores information on all campaign members that were influenced by campaigns that resulted in an opportunity creation/ sale.</description>
    <label>Campaign Attribution Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>CampaignAttributionMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Attribution Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>