force-app/main/default/objects/CampaignAttributionMember__c/fields/Pre_Opp_LT__c.field-meta.xml
<CustomField>
    <fullName>Pre_Opp_LT__c</fullName>
    <label>Pre-Opp LT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>