force-app/main/default/objects/CampaignAttributionMember__c/fields/Pre_Sales_FT__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_FT__c</fullName>
    <label>Pre-Sales FT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>